syntax = "proto2";

package cloudprober.surfacer.probestatus;

option go_package = "github.com/cloudprober/cloudprober/surfacers/internal/probestatus/proto";

message SurfacerConf {
    // default 60s
    optional int32 resolution_sec = 1 [default = 60];

    // Number of points in each timeseries. This field dictates how far back
    // can you go up to (resolution_sec * timeseries_size). Note that higher
    // this number, more memory you'll use.
    optional int32 timeseries_size = 2 [default = 4320];

    // Max targets per probe.
    optional int32 max_targets_per_probe = 3 [default = 20];

    // ProbeStatus URL
    // Note that older default URL /probestatus forwards to this URL to avoid
    // breaking older default setups.
    optional string url = 4 [default = "/status"];

    // Page cache time
    optional int32 cache_time_sec = 5 [default=2];

    // Probestatus surfacer is enabled by default. To disable it, set this
    // option.
    optional bool disable = 6;
}
